--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: 'Arial, sans-serif';
+    font-family: Arial, sans-serif;
     overflow-x: hidden;
+    background-color: #f2f2f2;
 }
 
 .section {
@@ -15,18 +16,31 @@ body, html {
     text-align: center;
     opacity: 0;
     transition: opacity 1s ease-in-out;
+    padding: 0; /* Remove padding to avoid any extra space */
+}
+
+#top-banner {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Ensures that the GIF fits within the section */
 }
 
 #top-banner img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover; /* Ensures the GIF covers the entire area without stretching */
 }
 
 #invitation, #details, #rsvp {
-    background-color: #f9f9f9;
+    background-color: #ffffff;
     padding: 20px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    max-width: 800px;
+    margin: 20px auto;
 }
 
 #rsvp-button {
